[package]
name = "rust_injector"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30"

windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    ] }
